[package]
name = "cpm"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
config = "0.14.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
rust-embed = "8.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0"
shellwords = "1.1.0"
spdlog-rs = { version = "0.3.13", features = ["level-trace", "release-level-trace"] }
sys-info = "0.9.1"
walkdir = "2.5.0"
